--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
+			<dvi class="arrow_left">
+				<img src="./assets/images/arrow_left.png" alt="arrow left">
+			</dvi>
+			<dvi class="arrow_right">
+				<img src="./assets/images/arrow_right.png" alt="arrow right">
+			</dvi>
 		</div>
 	</div>
 	<section id="about-us" class="container">
